--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "handlebars-static",
-  "description": "An extensible static code generator for handlebars templates, targetting languages other than JavaScript, e.g. PHP",
+  "name": "handlebars-gen",
+  "description": "An extendable static code generator for handlebars templates, targetting languages other than JavaScript, e.g. PHP",
   "version": "0.0.1",
+  "author": "Charles Pick <charles.pick@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/codemix/handlebarsgen"
+  },
+  "main": "./lib/index",
+  "bin": {
+    "handlebars-gen": "./bin/handlebars-gen"
+  },
   "dependencies": {
     "optimist": "*",
     "mkdirp": "*",
